# symbolic-priors-cd

./: .gitignore  README.md  dry_run_report.json  pyproject.toml  requirements-lock.txt  run_calibration_once.py
docs/: 01_research_question_and_commitments.md  02_base_model_selection.md  03_decision_log.md  04_wrapper_api_contract.md  04a_orientation_audit.md  04b_source_inspection.md  04c_runtime_probe_plan.md  04c_runtime_probe_results.md  04d_dcdi_mask_probe_results.md  04e_equivalence_calibration_results.md  04f_dcdi_sampler_quality_diagnostic.md  04g_equal_variance_identifiability_check.md  04h_dagma_sampler_quality_diagnostic.md  04i_gadjid_sid_backend_spike.md  04j_mmd_shd_reference_crosscheck.md  05_dcdi_wrapper_implementation_plan.md  06_dagma_wrapper_implementation_plan.md  07_sid_verification_plan.md  08_base_model_selection_plan.md  08a_experiment_tracking_and_results_schema.md  08b_selection_study_constants_and_fairness_audit.md  08c_real_run_constants_and_training_budget_audit.md  08d_dcdi_training_budget_pilot.md  08e_reproduction_pass_readout.md  08f_eligible_nodes_intervention_policy.md  08g_file_exists_error_incident.md  08h_selection_study_adjudication.md  09_main_study_implementation_plan.md  09a_lambda_prior_calibration_readout.md  10_matched_l1_calibration_plan.md  11_prior_structural_relevance_investigation_plan.md  12_prior_relevance_findings_and_next_steps.md  13_prior_relevance_oracle_findings.md  phase_1_readout.md  phase_2b_dcdi_readout.md  phase_2c_dagma_readout.md  phase_2d_sid_readout.md  prior_loss_research.md
tests/: test_loader.py  (+44 more)
(+2297 files in other folders)
